# ORE_TUBA_Chinese

./: .gitignore  ORE_TUBA.rc  README.md  chs.rc  cht.rc  ffmpeg.txt  png2elg.py  png2elg_s.py  steps.txt
exe/: patch81.py
patch/: CMakeLists.txt  patch.cpp  patch.rc  uitext.txt
patch/lyric/: OverlayLyric.cpp  OverlayLyric.h  Wnd.cpp  Wnd.h  lyric.cpp  lyric.h
text/: pack.py  packextra.py  parsefunclib.py  solvetitle.py  tips.py  unpack.py
text/lucifen/: CMakeLists.txt  FileName.cpp  lucifen.cpp
text/sys_not_sob_raw/: config.json  config.py  ll_app.inf  voiceinf.py
text/sys_not_sob_solved/: ll_app.inf
